--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         image: [node-grunt-sass]
-        ruby: [14]
-    name: Build ci/${{ matrix.image }}:${{ matrix.ruby }}
+        node: [14]
+    name: Build ci/${{ matrix.image }}:${{ matrix.node }}
     steps:
       - uses: actions/checkout@v3
       - uses: docker/login-action@v2
@@ -29,6 +29,6 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v3
         with:
-          context: ci/${{ matrix.image }}/${{ matrix.ruby }}
+          context: ci/${{ matrix.image }}/${{ matrix.node }}
           pull: true
           push: ${{ github.ref == 'refs/heads/main' }}
